--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="main-header-layout container">
 
       <div class="index-logo">
-        <a href="#"><img src="img/index/nerds_logo.png" width="160px" height="65px" alt="Дизайн студия Nerds"></a>
+        <a><img src="img/index/nerds_logo.png" width="160" height="65" alt="Дизайн студия Nerds"></a>
       </div>
 
       <nav class="main-navigation">
@@ -25,7 +25,7 @@
             <a href=#>Клиенты</a>
           </li>
           <li>
-            <a href=#>Магазин</a>
+            <a href="file:///C:/Users/%D0%9F%D0%BE%D0%BB%D1%8C%D0%B7%D0%BE%D0%B2%D0%B0%D1%82%D0%B5%D0%BB%D1%8C/Documents/GitHub/345335-nerds/catalog.html">Магазин</a>
           </li>
           <li>
             <a href=#>Контакты</a>
@@ -51,155 +51,155 @@
           <div class="slide-text">
             <div class="slide-title">Долго, дорого, скрупулезно</div>
             <p>Математически выверенный дизайн<br>
-для вашего сайта или мобильного приложения.</p>
-            <a class="btn" href="#">Узнать больше</a>
+              для вашего сайта или мобильного приложения.</p>
+              <a class="btn" href="#">Узнать больше</a>
+            </div>
           </div>
-        </div>
-        <div class="slide">
-          <div class="slide-text">
-            <div class="slide-title">Дорого, скрупулезно</div>
-            <p>Математически выверенный дизайн<br>
-для вашего сайта или мобильного приложения.</p>
-            <a class="btn" href="#">Узнать больше</a>
-          </div>
-        </div>
-        <div class="slide">
-          <div class="slide-text">
-            <div class="slide-title">Скрупулезно</div>
-            <p>Математически выверенный дизайн<br>
-для вашего сайта или мобильного приложения.</p>
-            <a class="btn" href="#">Узнать больше</a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </header>
-  <main>
-    <div class="container">
-      <section class="products">
-        <div class="product">
-          <img  src="img/index/illustration_1.jpg" height="146px" width="300px" class="product-img" alt="Веб-сайты">
-          <b class="product-title">Веб-сайты</b>
-          <p class="product-info">Мир никогда не будет прежним<br> после того как увидит ваш сайт!</p>
-          <a class="btn red" href="# ">Заказать</a>
-        </div>
-        <div class="product">
-          <img  src="img/index/illustration_2.jpg" height="146px" width="300px" class="product-img" alt="Приложения">
-          <b class="product-title">Приложения</b>
-          <p class="product-info">Покорите топ-10 приложений в<br> AppStore и GooglePlay</p>
-          <a class="btn green" href="# ">Заказать</a>
-        </div>
-        <div class="product">
-          <img src="img/index/illustration_3.jpg" height="146px" width="300px" class="product-img" alt="Презентации">
-          <b class="product-title">Презентации</b>
-          <p class="product-info">Вы даже не подозреваете,<br> насколько вы изумительрны!</p>
-          <a class="btn yellow" href="# ">Заказать</a>
-        </div>
-      </section>
-      <section class="index-content">
-        <div class="left-side">
-          <h2 class="second-title">Мы — маленькая, но гордая дизайн-студия из Краснодара. </h2>
-          <p>
-            Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.
-          </p>
-          <b class="small-title">Выполняем заказы на разработку:</b>
-          <div class="content-list">
-          <ul >
-            <li class="list-item">Веб-сайтов любой сложности</li>
-            <li class="list-item">Мобильных приложений для iOS и Android</li>
-            <li class="list-item">Слайдшоу и видео для корпоративных презентаций</li>
-          </ul>
-        </div>
-        </div>
-        <div class="right-side">
-          <img class="logo-img" src="img/index/nerds_illustration.jpg" height="210px" width="360px">
-          <span class="right-side-title">С 2004 года мы любим точность во всем:</span>
-          <div class="features-info">
-            <div class="column-1">
-              <span class="procents">146<sup>%</sup></span>
-                <span class="description">Уровень самоотдачи</span>
+          <div class="slide">
+            <div class="slide-text">
+              <div class="slide-title">Дорого, скрупулезно</div>
+              <p>Математически выверенный дизайн<br>
+                для вашего сайта или мобильного приложения.</p>
+                <a class="btn" href="#">Узнать больше</a>
               </div>
-            <div class="column-2">
-                <span class="procents">100<sup>%</sup></span>
-                  <span class="description">Соблюдение сроков</span>
+            </div>
+            <div class="slide">
+              <div class="slide-text">
+                <div class="slide-title">Скрупулезно</div>
+                <p>Математически выверенный дизайн<br>
+                  для вашего сайта или мобильного приложения.</p>
+                  <a class="btn" href="#">Узнать больше</a>
                 </div>
-                <div class="column-3">
-                  <span class="procents">50<sup>%</sup></span>
+              </div>
+            </div>
+          </div>
+        </header>
+        <main>
+          <div class="container">
+            <section class="products">
+              <div class="product">
+                <img  src="img/index/illustration_1.jpg" height="146" width="300" class="product-img" alt="Веб-сайты">
+                <b class="product-title">Веб-сайты</b>
+                <p class="product-info">Мир никогда не будет прежним<br> после того как увидит ваш сайт!</p>
+                <a class="btn red" href="# ">Заказать</a>
+              </div>
+              <div class="product">
+                <img  src="img/index/illustration_2.jpg" height="146" width="300" class="product-img" alt="Приложения">
+                <b class="product-title">Приложения</b>
+                <p class="product-info">Покорите топ-10 приложений в<br> AppStore и GooglePlay</p>
+                <a class="btn green" href="# ">Заказать</a>
+              </div>
+              <div class="product">
+                <img src="img/index/illustration_3.jpg" height="146" width="300" class="product-img" alt="Презентации">
+                <b class="product-title">Презентации</b>
+                <p class="product-info">Вы даже не подозреваете,<br> насколько вы изумительрны!</p>
+                <a class="btn yellow" href="# ">Заказать</a>
+              </div>
+            </section>
+            <section class="index-content">
+              <div class="left-side">
+                <h2 class="second-title">Мы — маленькая, но гордая дизайн-студия из Краснодара. </h2>
+                <p>
+                  Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.
+                </p>
+                <b class="small-title">Выполняем заказы на разработку:</b>
+                <div class="content-list">
+                  <ul >
+                    <li class="list-item">Веб-сайтов любой сложности</li>
+                    <li class="list-item">Мобильных приложений для iOS и Android</li>
+                    <li class="list-item">Слайдшоу и видео для корпоративных презентаций</li>
+                  </ul>
+                </div>
+              </div>
+              <div class="right-side">
+                <img class="logo-img" src="img/index/nerds_illustration.jpg" height="210" width="360" alt="Студия Nerds">
+                <span class="right-side-title">С 2004 года мы любим точность во всем:</span>
+                <div class="features-info">
+                  <div class="column-1">
+                    <span class="procents">146<sup>%</sup></span>
+                    <span class="description">Уровень самоотдачи</span>
+                  </div>
+                  <div class="column-2">
+                    <span class="procents">100<sup>%</sup></span>
+                    <span class="description">Соблюдение сроков</span>
+                  </div>
+                  <div class="column-3">
+                    <span class="procents">50<sup>%</sup></span>
                     <span class="description">Минимальная предоплата</span>
                   </div>
 
+                </div>
+              </div>
+            </section>
+            <div class="partners">
+              <div class="partner">
+                <img src="img/index/html_academy.png" height="70" width="200" class="p1" alt="HTML Academy">
+              </div>
+              <div class="partner2">
+                <img src="img/index/borodinski.png" height="88" width="210" class="p2" alt="Borodinski">
+              </div>
+              <div class="partner3">
+                <img src="img/index/pink.png" height="50" width="185" class="p3" alt="Pink">
+              </div>
+              <img src="img/index/mishka.png" height="85" width="173" class="p4" alt="Mishka">
+
+            </div>
           </div>
+        </main>
+        <section class="map container">
+          <div class="contacts-container">
+            <div class="contacts-infotmation">
+              <b class="contacts-infotmation-name">Nerds Design Studio</b><br>
+              <span class="contacts-infotmation-adress">
+                191186, Санкт-Петербург,<br>
+                ул. Б. Конюшенная, д. 19/8<br>
+              </span>
+              <span class="tel">
+                Тел: +7 (812) 275-75-75<br>
+              </span>
+            </div>
+            <div class="contact-button">
+              <a   href="#" >Напишите нам</a>
+            </div>
+          </div>
+        </section>
+        <footer class="main-footer">
+          <div class="main-footer-layout container">
+
+            <div class="footer-information">
+              <span class="slogan">Давайте дружить, это выгодно!</span>
+              <span class="slogan-description">Скидка 10% для друзей из социальных сетей.</span>
+            </div>
+
+            <div class="social-button">
+              <a class="social-btn social-btn-vk" href="#">вконтакте</a>
+              <a class="social-btn social-btn-fb" href="#">фейсбук</a>
+              <a class="social-btn social-btn-inst" href="#">инстаграм</a>
+            </div>
+
+          </div>
+        </footer>
+        <div class="modal-content">
+          <button class="modal-content-close" type="button" title="Закрыть">Закрыть</button>
+          <h2 class="modal-content-title">Напишите нам</h2>
+          <form class="write-us-form" action="https://echo.htmlacademy.ru" method="post">
+            <div class="top_field">
+              <label >
+                Вашe имя:
+                <input class="name" type="text" name="name" placeholder="Представьтесь, пожалуйста" >
+              </label>
+              <label>
+                Ваш E-mail:
+                <input class="email" type="text"  name="email" placeholder="Для отправки ответа" >
+              </label>
+            </div>
+            <label >
+              Текст письма:
+              <input class="letter" type="text"  name="letter" placeholder="В свободной форме" >
+            </label>
+            <button class="btn " type="submit">Отправить</button>
+          </form>
         </div>
-      </section>
-      <div class="partners">
-        <div class="partner">
-        <img src="img/index/html_academy.png" height="70px" width="200px" class="p1" alt="HTML Academy">
-      </div>
-      <div class="partner2">
-        <img src="img/index/borodinski.png" height="88px" width="210px" class="p2" alt="Borodinski">
-      </div>
-        <div class="partner3">
-        <img src="img/index/pink.png" height="50px" width="185px" class="p3" alt="Pink">
-</div>
-        <img src="img/index/mishka.png" height="85px" width="173px" class="p4" alt="Mishka">
-
-    </div>
-  </div>
-  </main>
-  <section class="map container">
-    <div class="contacts-container">
-      <div class="contacts-infotmation">
-        <b class="contacts-infotmation-name">Nerds Design Studio</b><br>
-        <span class="contacts-infotmation-adress">
-        191186, Санкт-Петербург,<br>
-        ул. Б. Конюшенная, д. 19/8<br>
-      </span>
-      <span class="tel">
-        Тел: +7 (812) 275-75-75<br>
-      </span>
-    </div>
-    <div class="contact-button">
-      <a   href="#" >Напишите нам</a>
-    </div>
-    </div>
-      </section>
-      <footer class="main-footer">
-        <div class="main-footer-layout container">
-
-          <div class="footer-information">
-            <span class="slogan">Давайте дружить, это выгодно!</span>
-            <span class="slogan-description">Скидка 10% для друзей из социальных сетей.</span>
-          </div>
-
-          <div class="social-button">
-            <a class="social-btn social-btn-vk" href="#">вконтакте</a>
-            <a class="social-btn social-btn-fb" href="#">фейсбук</a>
-            <a class="social-btn social-btn-inst" href="#">инстаграм</a>
-          </div>
-
-      </div>
-    </footer>
-    <div class="modal-content">
-      <button class="modal-content-close" type="button" title="Закрыть">Закрыть</button>
-      <h2 class="modal-content-title">Напишите нам</h2>
-      <form class="write-us-form" action="https://echo.htmlacademy.ru" method="post">
-        <div class="top_field">
-        <label >
-          Вашe имя:
-        <input class="name" type="text" name="name" placeholder="Представьтесь, пожалуйста" >
-      </label>
-      <label>
-          Ваш E-mail:
-        <input class="email" type="text"  name="email" placeholder="Для отправки ответа" >
-      </label>
-    </div>
-      <label >
-        Текст письма:
-        <input class="letter" type="text-area"  name="letter" placeholder="В свободной форме" >
-      </label>
-        <button class="btn " type="submit">Отправить</button>
-      </form>
-    </div>
-    <script src="js/script.js"></script>
-  </body>
-  </html>
+        <script src="js/script.js"></script>
+      </body>
+      </html>
