--- a/catalog.html
+++ b/catalog.html
@@ -12,7 +12,7 @@
     <div class="main-header-layout container">
 
       <div class="index-logo">
-        <a href="file:///C:/Users/%D0%9F%D0%BE%D0%BB%D1%8C%D0%B7%D0%BE%D0%B2%D0%B0%D1%82%D0%B5%D0%BB%D1%8C/Documents/GitHub/345335-nerds/index.html"><img src="img/index/nerds_logo.png" width="160" height="65" alt="Дизайн студия Nerds"></a>
+        <a href="index.html"><img src="img/index/nerds_logo.png" width="160" height="65" alt="Дизайн студия Nerds"></a>
       </div>
 
       <nav class="main-navigation">
