--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <a href=#>Клиенты</a>
           </li>
           <li>
-            <a href="file:///C:/Users/%D0%9F%D0%BE%D0%BB%D1%8C%D0%B7%D0%BE%D0%B2%D0%B0%D1%82%D0%B5%D0%BB%D1%8C/Documents/GitHub/345335-nerds/catalog.html">Магазин</a>
+            <a href="catalog.html">Магазин</a>
           </li>
           <li>
             <a href=#>Контакты</a>
@@ -49,25 +49,25 @@
       <div class="slides">
         <div class="slide">
           <div class="slide-text">
-            <div class="slide-title">Долго, дорого, скрупулезно</div>
+            <div class="slide-title">Долго, дорого, скрупулезно.</div>
             <p>Математически выверенный дизайн<br>
               для вашего сайта или мобильного приложения.</p>
               <a class="btn" href="#">Узнать больше</a>
             </div>
           </div>
           <div class="slide">
-            <div class="slide-text">
-              <div class="slide-title">Дорого, скрупулезно</div>
-              <p>Математически выверенный дизайн<br>
-                для вашего сайта или мобильного приложения.</p>
+            <div class="slide-text desctop-text">
+              <div class="slide-title">Любим математику как никто другой</div>
+              <p>Никакого креатива, только математические формулы<br>
+                для расчета идеальных пропорций.</p>
                 <a class="btn" href="#">Узнать больше</a>
               </div>
             </div>
             <div class="slide">
-              <div class="slide-text">
-                <div class="slide-title">Скрупулезно</div>
-                <p>Математически выверенный дизайн<br>
-                  для вашего сайта или мобильного приложения.</p>
+              <div class="slide-text mobile-text">
+                <div class="slide-title">Только ночь, только хардкор</div>
+                <p>Работать днем, как все? Мы против этого.<br>
+                  Ближе к полуночи работа только начинается.</p>
                   <a class="btn" href="#">Узнать больше</a>
                 </div>
               </div>
